--- a/src/app/registerLayout/registerLayout.component.html
+++ b/src/app/registerLayout/registerLayout.component.html
@@ -1,28 +1,4 @@
+<app-register-top></app-register-top>
 
-
-<ebay-TopCard>
-    Loading . . .
-  </ebay-TopCard>
-  
-  <ebay-Ad>
-  Loading . . .
-  </ebay-Ad>
-  
-  
-  <ebay-MiddleCarousel>
-    
-  </ebay-MiddleCarousel>
-  
-  
-  <ebay-MiddleButtons>
-  
-    Loading. . .
-  </ebay-MiddleButtons>
-  
-  
-  <ebay-lowerCard>
-    Loading. . .
-  </ebay-lowerCard> 
-  
-  
-  
+<app-register-left></app-register-left>
+<app-register-bottom></app-register-bottom>
