--- a/src/app/Footer/Footer.component.html
+++ b/src/app/Footer/Footer.component.html
@@ -1,104 +1,18 @@
+<div class="container align-items-top">
 
-   
-   <div class="row align-items-top">
-        
-        <p><a href="#" class="text-secondary text-center h6"></a></p>
-        <p><a href="#" class="text-secondary text-center h6"></a></p>
-        <p><a href="#" class="text-secondary text-center h6"></a></p>
-        <span class="border border-light"></span>
-        <div class="col-2">
-        </div>
-        <div class="col-10">
 
-            <div class="btn-group-vertical col-2">
-               
-    <button type="button" class="btn btn-default text-left">Buy</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Registration</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Bidding & buying help</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Stores</button>
-    <button type="button" class="btn btn-default btn-sm text-left">eBay for Charity</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Charity Shop</button>
+    <ul class="nav">
+        <li class="nav-item" style="font-size:10px;">
+            Copyright 1995-2022 eBay Inc. All Rights Reserved
+            <button type="button" class="btn btn-default btn-sm">Accesibility,</button>
+            <button type="button" class="btn btn-default btn-sm">User Agreement,</button>
+            <button type="button" class="btn btn-default btn-sm">Privacy,</button>
+            <button type="button" class="btn btn-default btn-sm">Cookies,</button>
+            <button type="button" class="btn btn-default btn-sm">Do not sell my personal information</button>
+            
+            <button type="button" class="btn btn-default btn-sm ">AdChoice</button>
+        </li>
+    </ul>
 
 </div>
-
-
-<div class="btn-group-vertical col-2">
-     
-    <button type="button" class="btn btn-default text-left">Sell</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Start selling</button>
-    <button type="button" class="btn btn-default btn-sm text-left">How to sell</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Buisness Sellers</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Affiliates</button>
-    <button type="button" class="btn btn-default btn-sm text-left"></button>
-    <button type="button" class="btn btn-default text-left">Tools & apps</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Developers</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Security center</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Site map</button>
-    
-   
-</div>
-
-<div class="btn-group-vertical text-left col-2">
-     
-    <button type="button" class="btn btn-default text-left">Stay connected</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Facebook</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Twitter</button>
-    
-    
-   
-</div>
-
-<div class="btn-group-vertical text-left col-2">
-               
-    <button type="button" class="btn btn-default text-left">About eBay</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Company info</button>
-    <button type="button" class="btn btn-default btn-sm text-left">News</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Investors</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Careers</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Diversity & Inclusion</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Global Impact</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Government relations</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Advertise with us</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Policies</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Verified Rights Owner(VeRO) Program</button>
-    <button type="button" class="btn btn-default btn-sm text-left">eCi Liscenses</button>
-
-</div>
-
-<div class="btn-group-vertical text-left col-2">
-   
-    <button type="button" class="btn btn-default text-left">Help & Contact</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Seller Center</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Contact Us</button>
-    <button type="button" class="btn btn-default btn-sm text-left">eBay Returns</button>
-    <button type="button" class="btn btn-default btn-sm text-left"></button>
-    <button type="button" class="btn btn-default text-left">Community</button>
-    <button type="button" class="btn btn-default btn-sm text-left">Announcements</button>
-    <button type="button" class="btn btn-default btn-sm text-left">eBay Community</button>
-    <button type="button" class="btn btn-default btn-sm text-left">eBay for Buisness Podcase</button>
-    <button type="button" class="btn btn-default btn-sm text-left"></button>
-    <button type="button" class="btn btn-default text-left">eBay Sites</button>
-    <button type="button" class="btn btn-default btn-sm text-left"><img src="/assets/USA.png"
-        style=height:22px> United States</button>
-
-</div>
-
-<ul class="nav">
-    <li class="nav-item" style="font-size:10px;">
-        Copyright 1995-2022 eBay Inc. All Rights Reserved
-    <button type="button" class="btn btn-default btn-sm">Accesibility,</button>
-    <button type="button" class="btn btn-default btn-sm">User Agreement,</button>
-    <button type="button" class="btn btn-default btn-sm">Privacy,</button>
-    <button type="button" class="btn btn-default btn-sm">Cookies,</button>
-    <button type="button" class="btn btn-default btn-sm">Do not sell my personal information</button>
-    and
-    <button type="button" class="btn btn-default btn-sm ">AdChoice</button>
-</li>
-</ul>
-
-</div>
-</div>
-
-
-
 
