--- a/src/app/register-top/register-top.component.html
+++ b/src/app/register-top/register-top.component.html
@@ -11,7 +11,7 @@
 
     <div class="d-flex justify-content-center">
     
-        <button type="button" class="btn btn-primary"></button> <p class="font-weight-normal">Personal account</p> <button type="button" class="btn btn-light"></button> <p class="font-weight-normal">Buisness account</p>
+       <p class="font-weight-normal">Personal account or </p> <p class="font-weight-normal">Buisness account</p>
 
     </div>
 
