--- a/src/app/registerLayout/registerLayout.component.html
+++ b/src/app/registerLayout/registerLayout.component.html
@@ -1,3 +1,5 @@
-<!-- <app-register-top></app-register-top>
+<app-register-top></app-register-top>
+
 <app-register-bottom></app-register-bottom>
-<app-register-left></app-register-left> -->
+
+<app-register-left></app-register-left>
