--- a/src/app/user-info/user-info.component.html
+++ b/src/app/user-info/user-info.component.html
@@ -1,12 +1,12 @@
-<p *nglf="myInfo == undefined">Failed fetching user data</p>
-<div *nglf="myInfo!= undefined" class="container-fluid bg primary">
+<p *ngIf="myInfo == undefined">Failed fetching user data</p>
+<div *ngIf="myInfo != undefined" class="container-fluid bg-primary">
     <div class="row">
         <div class="col-3">
-            User:{{myInfo.FirstName}} {{LastName}}
+            User: {{myInfo.FirstName}} {{myInfo.LastName}}
         </div>
         <div class="col-6">
-            <a href={{myInfo.GitHub}}> GitHub:{{myInfo.GitHub}} </a>
+            <a class="text-dark" href={{myInfo.GitHub}}> GitHub:{{myInfo.GitHub}} </a>
         </div>
-        <div class="col-3"> email: {{myInfo.mix_id}}></div>
+        <div class="col-3"> email: {{myInfo.mix_id}}</div>
     </div>
 </div>
