--- a/src/app/TopNavBar/TopNavBar.component.html
+++ b/src/app/TopNavBar/TopNavBar.component.html
@@ -7,7 +7,7 @@
 
             Hi! Hit <button type="button" class="btn btn-link btn-sm" routerLink= 'SignIn'>Sign in</button> or <button type="button"
                 class="btn btn-link btn-sm" routerLink= 'register'>Register</button>
-            <button type="button" class="btn btn-default btn-sm" routerLink= 'dailyDeals'>Daily Deals</button>
+            <button type="button" class="btn btn-default btn-sm" routerLink= 'admin'>Daily Deals</button>
             <button type="button" class="btn btn-default btn-sm" routerLink= 'brandOutlet'>Brand Outlet</button>
             <button type="button" class="btn btn-default btn-sm" routerLink= 'helpAndContact'>Help & Contact</button>
         </div>
