--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,4 +1,4 @@
-<form #authForm="ngForm" (ngSubmit)="onSubmit(authForm.value)">
+<form #authForm="ngForm" (ngSubmit)="onSubmit(authForm)">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
       <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email"
@@ -8,7 +8,8 @@
     
       <label for="exampleInputPassword1">Password</label>
       <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"ngModel name="password"
-      required emailpassword>
+      required password minlength="8">
     
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button class="btn btn-primary" type="submit" [disabled] = "!authForm.valid" >Login</button> 
+    <button type="submit" class="btn btn-primary">Sign Up</button>
   </form>
